--- a/best-travel-back/pom.xml
+++ b/best-travel-back/pom.xml
@@ -64,6 +64,12 @@
             <optional>true</optional>
         </dependency>
 
+        <!--Spring Webflux -> Webclient-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
